[package]
name = "ublkera"
version = "0.1.0"
edition = "2021"
description = "dm-era-like ublk block device: pass-through to a backing device/file with era-based change tracking"
license = "MIT"

[dependencies]
libublk = "0.4.6"
io-uring = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
nix = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
daemonize = "0.5"
ilog = "1"
signal-hook = "0.3"

[profile.release]
lto = true
