[package]
name = "ublkfault"
version = "0.1.0"
edition = "2021"
description = "fault-injecting in-memory ublk block device for testing ublk targets (SST lower layer)"
license = "MIT"

[dependencies]
libublk = "0.4.6"
io-uring = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
